[tool.poetry]
name = "llama2"
version = "0.1.0"
description = ""
authors = ["naayem <vincentnaayem@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
streamlit = "^1.25.0"
replicate = "^0.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
